# vulkano-text

./: .travis.yml  Cargo.toml  build.rs  license.txt  readme.md
.github/workflows/: rust.yml
examples/: README.md  stress_test.rs  triangle.rs  window.rs
src/: lib.rs  render_pass_desc.rs
src/shaders/: fragment.glsl  vertex.glsl
