[package]
name = "vulkano_text"
version = "0.12.0"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Render text with the DejaVu font using the Vulkano library."
license = "MIT"
repository = "https://github.com/rukai/vulkano-text"
keywords = ["vulkano", "text", "font"]

[dependencies]
rusttype = { version = "0.8", features = ["gpu_cache"] }
vulkano = "0.17"
vulkano-shaders = "0.17"

[dev-dependencies]
winit = "0.21"
vulkano-win = "0.17"
